package sokoban.model;

public abstract class GameObject {
}
