package sokoban.model;

public class Player {
}
