package sokoban.model;

public class Wall {
}
