package sokoban.view;

import javafx.scene.layout.GridPane;

public abstract class GridView extends GridPane {
}
