package sokoban.view.api;

import javafx.scene.layout.BorderPane;

public abstract class BoardView extends BorderPane {
}
